<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/btnCpF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/botos"
            android:onClick="calcCpF"
            android:text="@string/tituloCpF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnCpK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/botos"
            android:onClick="calcCpK"
            android:text="@string/tituloCpK"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnFpC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/botos"
            android:onClick="calcFpC"
            android:text="@string/tituloFpC"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnFpK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/botos"
            android:onClick="calcFpK"
            android:text="@string/tituloFpK"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnKpC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/botos"
            android:onClick="calcKpC"
            android:text="@string/tituloKpC"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnKpF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/botos"
            android:onClick="calcKpF"
            android:text="@string/tituloKpF"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>